Kubernetes/prometheus/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prom.localhost`)
    kind: Rule
    services:
    - name: prometheus
      port: 9090
